# Mininec3_object_test

./: Beta_247_315.cpp  Beta_247_315.hpp  CMakeLists.txt  Connections.cpp  Connections.hpp  EllipticIntegral.cpp  EllipticIntegral.hpp  ExcitationInput.cpp  ExcitationInput.hpp  Factorization.cpp  Factorization.hpp  FrequencyInput.cpp  FrequencyInput.hpp  GeometryData.hpp  GeometryInput.cpp  GeometryInput.hpp  GeometryOutput.cpp  GeometryOutput.hpp  Gosub102.cpp  Gosub102.hpp  Gosub113.cpp  Gosub113.hpp  Gosub135.cpp  Gosub135.hpp  Gosub87.cpp  Gosub87.hpp  ImpedanceMatrix.cpp  ImpedanceMatrix.hpp  KernelEval.hpp  Kerneleval.cpp  LICENSE  MatSolve.cpp  MatSolve.hpp  PrintCurrents.cpp  PrintCurrents.hpp  README.md  SimulationState.hpp  SourceData.cpp  SourceData.hpp  Sub_273_312.cpp  (+7 more)
